--- a/priv/gettext/ar/LC_MESSAGES/default.po
+++ b/priv/gettext/ar/LC_MESSAGES/default.po
@@ -15,155 +15,155 @@ msgstr ""
 #: lib/boba_talkie_web/live/map_selection_live.html.heex:16
 #, elixir-autogen
 msgid "Choose Your Learning Adventure"
-msgstr ""
+msgstr "اختر مغامرتك التعليمية"
 
 #: lib/boba_talkie_web/live/map_selection_live.html.heex:17
 #, elixir-autogen
 msgid "Select a topic to start your voice-controlled journey"
-msgstr ""
+msgstr "حدد موضوعًا لبدء رحلتك المتحكم بها بالصوت"
 
 #: lib/boba_talkie_web/live/map_selection_live.html.heex:84
 #, elixir-autogen
 msgid "Back to Home"
-msgstr ""
+msgstr "عد إلى الرئيسية"
 
 #: lib/boba_talkie_web/live/map_selection_live.html.heex:63
 #, elixir-autogen
 msgid "Learn"
-msgstr ""
+msgstr "تعلّم"
 
 #: lib/boba_talkie_web/live/map_selection_live.html.heex:71
 #, elixir-autogen
 msgid "Play"
-msgstr ""
+msgstr "العب"
 
 # Language selection
 #: lib/boba_talkie_web/components/language_selector.ex:19
 #, elixir-autogen
 msgid "Interface Language"
-msgstr ""
+msgstr "لغة الواجهة"
 
 #: lib/boba_talkie_web/components/language_selector.ex:45
 #, elixir-autogen
 msgid "Learning Language"
-msgstr ""
+msgstr "لغة التعلم"
 
 msgid "Select the language you want to learn"
-msgstr ""
+msgstr "اختر اللغة التي تريد تعلمها"
 
 # Game interface
 msgid "Quick Commands:"
-msgstr ""
+msgstr "أوامر سريعة:"
 
 msgid "Stats"
-msgstr ""
+msgstr "إحصائيات"
 
 msgid "Commands:"
-msgstr ""
+msgstr "أوامر:"
 
 msgid "Score:"
-msgstr ""
+msgstr "النتيجة:"
 
 msgid "Messages"
-msgstr ""
+msgstr "رسائل"
 
 msgid "Voice Recognition Ready"
-msgstr ""
+msgstr "تمييز الصوت جاهز"
 
 msgid "Listening..."
-msgstr ""
+msgstr "أستمع..."
 
 msgid "Speak a command..."
-msgstr ""
+msgstr "انطق أمرًا..."
 
 msgid "Last:"
-msgstr ""
+msgstr "الأخير:"
 
 msgid "Recording... (Release to stop)"
-msgstr ""
+msgstr "تسجيل... (اترك للإيقاف)"
 
 msgid "Hold to Speak (or R)"
-msgstr ""
+msgstr "اضغط للتحدث (أو R)"
 
 msgid "Challenges"
-msgstr ""
+msgstr "تحديات"
 
 msgid "Select a card!"
-msgstr ""
+msgstr "اختر بطاقة!"
 
 # Tutorial interface
 msgid "Tutorial"
-msgstr ""
+msgstr "درس تعليمي"
 
 msgid "Vocabulary"
-msgstr ""
+msgstr "مفردات"
 
 msgid "Practice saying each word"
-msgstr ""
+msgstr "تدرّب على نطق كل كلمة"
 
 msgid "Continue to Game"
-msgstr ""
+msgstr "متابعة إلى اللعبة"
 
 msgid "Skip Tutorial"
-msgstr ""
+msgstr "تخطي الدرس التعليمي"
 
 # Completion messages
 msgid "Congratulations!"
-msgstr ""
+msgstr "تهانينا!"
 
 msgid "You completed all"
-msgstr ""
+msgstr "لقد أكملت جميع"
 
 msgid "cards! Your pronunciation score:"
-msgstr ""
+msgstr "البطاقات! نتيجة نطقك:"
 
 msgid "Play Again"
-msgstr ""
+msgstr "العب مرة أخرى"
 
 # Error messages
 msgid "Invalid selection"
-msgstr ""
+msgstr "اختيار غير صحيح"
 
 msgid "Microphone not available"
-msgstr ""
+msgstr "الميكروفون غير متاح"
 
 # Level descriptions
 msgid "Learn basic phrases to introduce yourself"
-msgstr ""
+msgstr "تعلّم عبارات أساسية لتقديم نفسك"
 
 msgid "Discover fruits and food vocabulary"
-msgstr ""
+msgstr "اكتشف مفردات الفواكه والطعام"
 
 msgid "Practice counting and number vocabulary"
-msgstr ""
+msgstr "تدرّب على العد ومفردات الأرقام"
 
 msgid "Learn colors and color descriptions"
-msgstr ""
+msgstr "تعلّم الألوان وأوصاف الألوان"
 
 msgid "Learn bakery items and ordering phrases"
-msgstr ""
+msgstr "تعلّم منتجات المخبز وعبارات الطلب"
 
 msgid "Discover animal vocabulary and descriptions"
-msgstr ""
+msgstr "اكتشف مفردات الحيوانات والأوصاف"
 
 msgid "Practice ordering food and restaurant phrases"
-msgstr ""
+msgstr "تدرّب على طلب الطعام وعبارات المطعم"
 
 msgid "Learn family relationships and descriptions"
-msgstr ""
+msgstr "تعلّم علاقات العائلة والأوصاف"
 
 msgid "Explore countries, nationalities, and cultures"
-msgstr ""
+msgstr "استكشف البلدان والجنسيات والثقافات"
 
 #: lib/boba_talkie_web/live/index_live.html.heex:17
 #, elixir-autogen
 msgid "Learn languages through voice-controlled gaming"
-msgstr ""
+msgstr "تعلّم اللغات من خلال الألعاب المتحكم بها بالصوت"
 
 #: lib/boba_talkie_web/live/index_live.html.heex:24
 #, elixir-autogen
 msgid "How it works"
-msgstr ""
+msgstr "كيف يعمل"
 
 #: lib/boba_talkie_web/components/core_components.ex:342
 #: lib/boba_talkie_web/live/index_live.html.heex:75
@@ -175,22 +175,22 @@ msgstr "إجراءات"
 #: lib/boba_talkie_web/components/layouts.ex:111
 #, elixir-autogen, elixir-format
 msgid "Attempting to reconnect"
-msgstr ""
+msgstr "محاولة إعادة الاتصال"
 
 #: lib/boba_talkie_web/components/layouts.ex:106
 #, elixir-autogen, elixir-format
 msgid "Something went wrong!"
-msgstr ""
+msgstr "حدث خطأ ما!"
 
 #: lib/boba_talkie_web/components/layouts.ex:94
 #, elixir-autogen, elixir-format
 msgid "We can't find the internet"
-msgstr ""
+msgstr "لا يمكننا العثور على الإنترنت"
 
 #: lib/boba_talkie_web/components/core_components.ex:74
 #, elixir-autogen, elixir-format
 msgid "close"
-msgstr ""
+msgstr "إغلاق"
 
 #: lib/boba_talkie_web/live/index_live.html.heex:88
 #, elixir-autogen, elixir-format
@@ -286,3 +286,38 @@ msgstr "المستوى:"
 #, elixir-autogen, elixir-format
 msgid "Words:"
 msgstr "كلمات:"
+
+# Level difficulty translations
+msgid "Beginner"
+msgstr "مبتدئ"
+
+msgid "Intermediate"
+msgstr "متوسط"
+
+# Level title translations
+msgid "Numbers"
+msgstr "الأرقام"
+
+msgid "Self-Introduction"
+msgstr "تقديم الذات"
+
+msgid "Fruits & Food"
+msgstr "الفواكه والطعام"
+
+msgid "Colors"
+msgstr "الألوان"
+
+msgid "Bakery"
+msgstr "مخبز"
+
+msgid "Animals"
+msgstr "الحيوانات"
+
+msgid "Restaurant"
+msgstr "مطعم"
+
+msgid "Family"
+msgstr "العائلة"
+
+msgid "Countries"
+msgstr "البلدان"
