--- a/priv/gettext/it/LC_MESSAGES/default.po
+++ b/priv/gettext/it/LC_MESSAGES/default.po
@@ -321,3 +321,7 @@ msgstr "Famiglia"
 
 msgid "Countries"
 msgstr "Paesi"
+
+# Language selection for main page
+msgid "Language I want to learn:"
+msgstr "Lingua che voglio imparare:"
