--- a/priv/gettext/en/LC_MESSAGES/default.po
+++ b/priv/gettext/en/LC_MESSAGES/default.po
@@ -321,3 +321,7 @@ msgstr "Family"
 
 msgid "Countries"
 msgstr "Countries"
+
+# Language selection for main page
+msgid "Language I want to learn:"
+msgstr "Language I want to learn:"
