--- a/priv/gettext/es/LC_MESSAGES/default.po
+++ b/priv/gettext/es/LC_MESSAGES/default.po
@@ -311,3 +311,7 @@ msgstr "Familia"
 
 msgid "Countries"
 msgstr "Países"
+
+# Language selection for main page
+msgid "Language I want to learn:"
+msgstr "Idioma que quiero aprender:"
