--- a/priv/gettext/ja/LC_MESSAGES/default.po
+++ b/priv/gettext/ja/LC_MESSAGES/default.po
@@ -321,3 +321,7 @@ msgstr "家族"
 
 msgid "Countries"
 msgstr "国"
+
+# Language selection for main page
+msgid "Language I want to learn:"
+msgstr "学びたい言語："
