--- a/priv/gettext/pt/LC_MESSAGES/default.po
+++ b/priv/gettext/pt/LC_MESSAGES/default.po
@@ -321,3 +321,7 @@ msgstr "Família"
 
 msgid "Countries"
 msgstr "Países"
+
+# Language selection for main page
+msgid "Language I want to learn:"
+msgstr "Idioma que quero aprender:"
