--- a/priv/gettext/ru/LC_MESSAGES/default.po
+++ b/priv/gettext/ru/LC_MESSAGES/default.po
@@ -321,3 +321,7 @@ msgstr "Семья"
 
 msgid "Countries"
 msgstr "Страны"
+
+# Language selection for main page
+msgid "Language I want to learn:"
+msgstr "Язык, который я хочу изучать:"
