--- a/priv/gettext/en/LC_MESSAGES/default.po
+++ b/priv/gettext/en/LC_MESSAGES/default.po
@@ -15,117 +15,119 @@ msgstr ""
 #: lib/boba_talkie_web/live/map_selection_live.html.heex:16
 #, elixir-autogen
 msgid "Choose Your Learning Adventure"
-msgstr ""
+msgstr "Choose Your Learning Adventure"
 
 #: lib/boba_talkie_web/live/map_selection_live.html.heex:17
 #, elixir-autogen
 msgid "Select a topic to start your voice-controlled journey"
-msgstr ""
+msgstr "Select a topic to start your voice-controlled journey"
 
-#: lib/boba_talkie_web/live/map_selection_live.html.heex:84
+#: lib/boba_talkie_web/live/map_selection_live.html.heex:75
 #, elixir-autogen
 msgid "Back to Home"
-msgstr ""
+msgstr "Back to Home"
 
-#: lib/boba_talkie_web/live/map_selection_live.html.heex:63
+#: lib/boba_talkie_web/live/map_selection_live.html.heex:54
 #, elixir-autogen
 msgid "Learn"
-msgstr ""
+msgstr "Learn"
 
-#: lib/boba_talkie_web/live/map_selection_live.html.heex:71
+#: lib/boba_talkie_web/live/map_selection_live.html.heex:62
 #, elixir-autogen
 msgid "Play"
-msgstr ""
+msgstr "Play"
 
 # Language selection
-#: lib/boba_talkie_web/components/language_selector.ex:19
+#: lib/boba_talkie_web/components/language_selector.ex:21
 #, elixir-autogen
 msgid "Interface Language"
-msgstr ""
+msgstr "Interface Language"
 
-#: lib/boba_talkie_web/components/language_selector.ex:45
+#: lib/boba_talkie_web/components/language_selector.ex:48
 #, elixir-autogen
 msgid "Learning Language"
-msgstr ""
+msgstr "Learning Language"
 
 msgid "Select the language you want to learn"
-msgstr ""
+msgstr "Select the language you want to learn"
 
 # Game interface
 msgid "Quick Commands:"
-msgstr ""
+msgstr "Quick Commands:"
 
 msgid "Stats"
-msgstr ""
+msgstr "Stats"
 
 msgid "Commands:"
-msgstr ""
+msgstr "Commands:"
 
 msgid "Score:"
-msgstr ""
+msgstr "Score:"
 
 msgid "Messages"
-msgstr ""
+msgstr "Messages"
 
 msgid "Voice Recognition Ready"
-msgstr ""
+msgstr "Voice Recognition Ready"
 
 msgid "Listening..."
-msgstr ""
+msgstr "Listening..."
 
 msgid "Speak a command..."
-msgstr ""
+msgstr "Speak a command..."
 
 msgid "Last:"
-msgstr ""
+msgstr "Last:"
 
 msgid "Recording... (Release to stop)"
-msgstr ""
+msgstr "Recording... (Release to stop)"
 
 msgid "Hold to Speak (or R)"
-msgstr ""
+msgstr "Hold to Speak (or R)"
 
 msgid "Challenges"
-msgstr ""
+msgstr "Challenges"
 
 msgid "Select a card!"
-msgstr ""
+msgstr "Select a card!"
 
 # Tutorial interface
+#: lib/boba_talkie_web/live/tutorial_live.html.heex:14
+#, elixir-autogen
 msgid "Tutorial"
-msgstr ""
+msgstr "Tutorial"
 
 msgid "Vocabulary"
-msgstr ""
+msgstr "Vocabulary"
 
 msgid "Practice saying each word"
-msgstr ""
+msgstr "Practice saying each word"
 
 msgid "Continue to Game"
-msgstr ""
+msgstr "Continue to Game"
 
 msgid "Skip Tutorial"
-msgstr ""
+msgstr "Skip Tutorial"
 
 # Completion messages
 msgid "Congratulations!"
-msgstr ""
+msgstr "Congratulations!"
 
 msgid "You completed all"
-msgstr ""
+msgstr "You completed all"
 
 msgid "cards! Your pronunciation score:"
-msgstr ""
+msgstr "cards! Your pronunciation score:"
 
 msgid "Play Again"
-msgstr ""
+msgstr "Play Again"
 
 # Error messages
 msgid "Invalid selection"
-msgstr ""
+msgstr "Invalid selection"
 
 msgid "Microphone not available"
-msgstr ""
+msgstr "Microphone not available"
 
 # Level descriptions
 msgid "Learn basic phrases to introduce yourself"
@@ -149,6 +151,8 @@ msgstr "Discover animal vocabulary and descriptions"
 msgid "Practice ordering food and restaurant phrases"
 msgstr "Practice ordering food and restaurant phrases"
 
+#: lib/boba_talkie_web/live/tutorial_live.ex:168
+#, elixir-autogen
 msgid "Learn family relationships and descriptions"
 msgstr "Learn family relationships and descriptions"
 
@@ -158,170 +162,279 @@ msgstr "Explore countries, nationalities, and cultures"
 #: lib/boba_talkie_web/live/index_live.html.heex:17
 #, elixir-autogen
 msgid "Learn languages through voice-controlled gaming"
-msgstr ""
+msgstr "Learn languages through voice-controlled gaming"
 
 #: lib/boba_talkie_web/live/index_live.html.heex:24
 #, elixir-autogen
 msgid "How it works"
-msgstr ""
+msgstr "How it works"
 
 #: lib/boba_talkie_web/components/core_components.ex:342
-#: lib/boba_talkie_web/live/index_live.html.heex:75
+#: lib/boba_talkie_web/live/index_live.html.heex:84
 #, elixir-autogen, elixir-format
 msgid "Actions"
-msgstr ""
+msgstr "Actions"
 
 #: lib/boba_talkie_web/components/layouts.ex:99
 #: lib/boba_talkie_web/components/layouts.ex:111
 #, elixir-autogen, elixir-format
 msgid "Attempting to reconnect"
-msgstr ""
+msgstr "Attempting to reconnect"
 
 #: lib/boba_talkie_web/components/layouts.ex:106
 #, elixir-autogen, elixir-format
 msgid "Something went wrong!"
-msgstr ""
+msgstr "Something went wrong!"
 
 #: lib/boba_talkie_web/components/layouts.ex:94
 #, elixir-autogen, elixir-format
 msgid "We can't find the internet"
-msgstr ""
+msgstr "We can't find the internet"
 
 #: lib/boba_talkie_web/components/core_components.ex:74
 #, elixir-autogen, elixir-format
 msgid "close"
-msgstr ""
+msgstr "close"
 
-#: lib/boba_talkie_web/live/index_live.html.heex:88
+#: lib/boba_talkie_web/live/index_live.html.heex:97
 #, elixir-autogen, elixir-format
 msgid "Built with Phoenix LiveView • Real-time voice recognition"
-msgstr ""
+msgstr "Built with Phoenix LiveView • Real-time voice recognition"
 
 #: lib/boba_talkie_web/live/index_live.html.heex:45
 #, elixir-autogen, elixir-format
 msgid "Get real-time pronunciation feedback"
-msgstr ""
+msgstr "Get real-time pronunciation feedback"
 
 #: lib/boba_talkie_web/live/index_live.html.heex:44
 #, elixir-autogen, elixir-format
 msgid "Learn & Improve"
-msgstr ""
+msgstr "Learn & Improve"
 
 #: lib/boba_talkie_web/live/index_live.html.heex:38
 #, elixir-autogen, elixir-format
 msgid "Move through a 2D grid world"
-msgstr ""
+msgstr "Move through a 2D grid world"
 
-#: lib/boba_talkie_web/live/index_live.html.heex:67
+#: lib/boba_talkie_web/live/index_live.html.heex:76
 #, elixir-autogen, elixir-format
 msgid "Movement"
-msgstr ""
+msgstr "Movement"
 
 #: lib/boba_talkie_web/live/index_live.html.heex:37
 #, elixir-autogen, elixir-format
 msgid "Navigate World"
-msgstr ""
+msgstr "Navigate World"
 
 #: lib/boba_talkie_web/live/index_live.html.heex:52
 #, elixir-autogen, elixir-format
 msgid "Ready to Start Learning?"
-msgstr ""
+msgstr "Ready to Start Learning?"
 
 #: lib/boba_talkie_web/live/index_live.html.heex:58
 #, elixir-autogen, elixir-format
 msgid "Select Map & Play"
-msgstr ""
+msgstr "Select Map & Play"
 
 #: lib/boba_talkie_web/live/index_live.html.heex:30
 #, elixir-autogen, elixir-format
 msgid "Speak Commands"
-msgstr ""
+msgstr "Speak Commands"
 
 #: lib/boba_talkie_web/live/index_live.html.heex:31
 #, elixir-autogen, elixir-format
 msgid "Use your voice to control your character"
-msgstr ""
+msgstr "Use your voice to control your character"
 
-#: lib/boba_talkie_web/live/index_live.html.heex:64
+#: lib/boba_talkie_web/live/index_live.html.heex:73
 #, elixir-autogen, elixir-format
 msgid "Voice Commands You'll Use"
-msgstr ""
-
-#: lib/boba_talkie_web/live/index_live.html.heex:69
-#, elixir-autogen, elixir-format
-msgid "go north"
-msgstr ""
-
-#: lib/boba_talkie_web/live/index_live.html.heex:79
-#, elixir-autogen, elixir-format
-msgid "help"
-msgstr ""
-
-#: lib/boba_talkie_web/live/index_live.html.heex:77
-#, elixir-autogen, elixir-format
-msgid "look around"
-msgstr ""
-
-#: lib/boba_talkie_web/live/index_live.html.heex:70
-#, elixir-autogen, elixir-format
-msgid "move east"
-msgstr ""
+msgstr "Voice Commands You'll Use"
 
 #: lib/boba_talkie_web/live/index_live.html.heex:78
 #, elixir-autogen, elixir-format
-msgid "pick up item"
-msgstr ""
+msgid "go north"
+msgstr "go north"
 
-#: lib/boba_talkie_web/live/index_live.html.heex:71
+#: lib/boba_talkie_web/live/index_live.html.heex:88
+#, elixir-autogen, elixir-format
+msgid "help"
+msgstr "help"
+
+#: lib/boba_talkie_web/live/index_live.html.heex:86
+#, elixir-autogen, elixir-format
+msgid "look around"
+msgstr "look around"
+
+#: lib/boba_talkie_web/live/index_live.html.heex:79
+#, elixir-autogen, elixir-format
+msgid "move east"
+msgstr "move east"
+
+#: lib/boba_talkie_web/live/index_live.html.heex:87
+#, elixir-autogen, elixir-format
+msgid "pick up item"
+msgstr "pick up item"
+
+#: lib/boba_talkie_web/live/index_live.html.heex:80
 #, elixir-autogen, elixir-format
 msgid "turn around"
-msgstr ""
+msgstr "turn around"
 
-#: lib/boba_talkie_web/live/map_selection_live.html.heex:46
+#: lib/boba_talkie_web/live/map_selection_live.html.heex:37
 #, elixir-autogen, elixir-format
 msgid "Level:"
 msgstr "Level:"
 
-#: lib/boba_talkie_web/live/map_selection_live.html.heex:50
+#: lib/boba_talkie_web/live/map_selection_live.html.heex:41
 #, elixir-autogen, elixir-format
 msgid "Words:"
 msgstr "Words:"
 
-# Level difficulties
-msgid "Beginner"
-msgstr "Beginner"
+#: lib/boba_talkie_web/live/tutorial_live.html.heex:134
+#, elixir-autogen, elixir-format
+msgid "Back to Maps"
+msgstr "Back to Maps"
 
-msgid "Intermediate"
-msgstr "Intermediate"
+#: lib/boba_talkie_web/live/tutorial_live.html.heex:81
+#, elixir-autogen, elixir-format
+msgid "Example Usage"
+msgstr "Example Usage"
 
-# Level titles
-msgid "Numbers"
-msgstr "Numbers"
+#: lib/boba_talkie_web/live/tutorial_live.html.heex:61
+#, elixir-autogen, elixir-format
+msgid "Hide Pronunciation"
+msgstr "Hide Pronunciation"
 
-msgid "Self-Introduction"
-msgstr "Self-Introduction"
+# Language selection for main page
+#: lib/boba_talkie_web/live/index_live.html.heex:63
+#, elixir-autogen, elixir-format
+msgid "Language I want to learn:"
+msgstr "Language I want to learn:"
 
-msgid "Fruits & Food"
-msgstr "Fruits & Food"
+#: lib/boba_talkie_web/live/tutorial_live.html.heex:123
+#, elixir-autogen, elixir-format
+msgid "Next"
+msgstr "Next"
 
-msgid "Colors"
-msgstr "Colors"
+#: lib/boba_talkie_web/live/tutorial_live.html.heex:148
+#, elixir-autogen, elixir-format
+msgid "Practice saying each word out loud to improve your pronunciation!"
+msgstr "Practice saying each word out loud to improve your pronunciation!"
 
-msgid "Bakery"
-msgstr "Bakery"
+#: lib/boba_talkie_web/live/tutorial_live.html.heex:109
+#, elixir-autogen, elixir-format
+msgid "Previous"
+msgstr "Previous"
 
+#: lib/boba_talkie_web/live/tutorial_live.html.heex:25
+#, elixir-autogen, elixir-format
+msgid "Progress"
+msgstr "Progress"
+
+#: lib/boba_talkie_web/live/tutorial_live.html.heex:72
+#: lib/boba_talkie_web/live/tutorial_live.html.heex:90
+#, elixir-autogen, elixir-format
+msgid "Romanization"
+msgstr "Romanization"
+
+#: lib/boba_talkie_web/live/tutorial_live.html.heex:63
+#, elixir-autogen, elixir-format
+msgid "Show Pronunciation"
+msgstr "Show Pronunciation"
+
+#: lib/boba_talkie_web/live/tutorial_live.html.heex:140
+#, elixir-autogen, elixir-format
+msgid "Start Playing"
+msgstr "Start Playing"
+
+#: lib/boba_talkie_web/live/tutorial_live.html.heex:148
+#, elixir-autogen, elixir-format
+msgid "Tip"
+msgstr "Tip"
+
+#: lib/boba_talkie_web/live/tutorial_live.ex:150
+#, elixir-autogen, elixir-format
 msgid "Animals"
 msgstr "Animals"
 
-msgid "Restaurant"
-msgstr "Restaurant"
+#: lib/boba_talkie_web/live/tutorial_live.ex:142
+#, elixir-autogen, elixir-format
+msgid "Bakery"
+msgstr "Bakery"
 
-msgid "Family"
-msgstr "Family"
+#: lib/boba_talkie_web/live/tutorial_live.ex:134
+#, elixir-autogen, elixir-format
+msgid "Colors"
+msgstr "Colors"
 
+#: lib/boba_talkie_web/live/tutorial_live.ex:174
+#, elixir-autogen, elixir-format
 msgid "Countries"
 msgstr "Countries"
 
-# Language selection for main page
-msgid "Language I want to learn:"
-msgstr "Language I want to learn:"
+#: lib/boba_talkie_web/live/tutorial_live.ex:152
+#, elixir-autogen, elixir-format, fuzzy
+msgid "Discover animal vocabulary and their characteristics"
+msgstr "Discover animal vocabulary and descriptions"
+
+#: lib/boba_talkie_web/live/tutorial_live.ex:120
+#, elixir-autogen, elixir-format, fuzzy
+msgid "Discover delicious fruits and food vocabulary"
+msgstr "Discover fruits and food vocabulary"
+
+#: lib/boba_talkie_web/live/tutorial_live.ex:176
+#, elixir-autogen, elixir-format, fuzzy
+msgid "Explore countries, nationalities, and cultural expressions"
+msgstr "Explore countries, nationalities, and cultures"
+
+#: lib/boba_talkie_web/live/tutorial_live.ex:136
+#, elixir-autogen, elixir-format
+msgid "Explore vibrant colors and color descriptions"
+msgstr "Explore vibrant colors and color descriptions"
+
+#: lib/boba_talkie_web/live/tutorial_live.ex:166
+#, elixir-autogen, elixir-format
+msgid "Family"
+msgstr "Family"
+
+#: lib/boba_talkie_web/live/tutorial_live.ex:118
+#, elixir-autogen, elixir-format
+msgid "Fruits & Food"
+msgstr "Fruits & Food"
+
+#: lib/boba_talkie_web/live/tutorial_live.ex:144
+#, elixir-autogen, elixir-format
+msgid "Learn essential bakery vocabulary and ordering phrases"
+msgstr "Learn essential bakery vocabulary and ordering phrases"
+
+# Level descriptions
+#: lib/boba_talkie_web/live/tutorial_live.ex:112
+#, elixir-autogen, elixir-format, fuzzy
+msgid "Learn essential phrases to introduce yourself"
+msgstr "Learn basic phrases to introduce yourself"
+
+#: lib/boba_talkie_web/live/tutorial_live.ex:128
+#, elixir-autogen, elixir-format, fuzzy
+msgid "Master counting and number vocabulary"
+msgstr "Practice counting and number vocabulary"
+
+#: lib/boba_talkie_web/live/tutorial_live.ex:160
+#, elixir-autogen, elixir-format
+msgid "Master restaurant vocabulary and ordering phrases"
+msgstr "Master restaurant vocabulary and ordering phrases"
+
+#: lib/boba_talkie_web/live/tutorial_live.ex:126
+#, elixir-autogen, elixir-format
+msgid "Numbers"
+msgstr "Numbers"
+
+#: lib/boba_talkie_web/live/tutorial_live.ex:158
+#, elixir-autogen, elixir-format
+msgid "Restaurant"
+msgstr "Restaurant"
+
+#: lib/boba_talkie_web/live/tutorial_live.ex:110
+#, elixir-autogen, elixir-format
+msgid "Self-Introduction"
+msgstr "Self-Introduction"
